--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,40 @@
                   <enabled>false</enabled>
                </snapshots>
             </repository>
+            
+		<repository>
+                    <id>fusesource</id>
+                    <url>http://repo.fusesource.com/nexus/content/groups/public/</url>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                </repository>
+               <repository>
+                    <id>fusesource.snapshot</id>
+                    <url>http://repo.fusesource.com/nexus/content/groups/public-snapshots/</url>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                    <releases>
+                        <enabled>false</enabled>
+                    </releases>
+                </repository>
+                <repository>
+                    <id>apache-public</id>
+                    <url>https://repository.apache.org/content/groups/public/</url>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+		</repository>
+
+            
+            
          </repositories>
 
          <pluginRepositories>
